[gd_scene load_steps=21 format=3 uid="uid://c4yox7amyk4xm"]

[ext_resource type="Script" path="res://sCRIPTS/Button.gd" id="1_8jkes"]
[ext_resource type="AudioStream" uid="uid://dmxxmopmcjol4" path="res://audio/SFX/Bell1.wav" id="2_7rsjc"]
[ext_resource type="AudioStream" uid="uid://blhub386srghi" path="res://audio/SFX/Bell2.wav" id="3_mcski"]
[ext_resource type="AudioStream" uid="uid://dn8n66wg07hky" path="res://audio/SFX/Bell3.wav" id="4_58ign"]
[ext_resource type="AudioStream" uid="uid://8i6ni2nhcox0" path="res://audio/SFX/Bell4.wav" id="5_r32l7"]
[ext_resource type="AudioStream" uid="uid://dw4rjjsbi84h" path="res://audio/SFX/Bell5.wav" id="6_tatxd"]
[ext_resource type="AudioStream" uid="uid://bgpyn74kp8re" path="res://audio/SFX/Bell6.wav" id="7_gb072"]
[ext_resource type="AudioStream" uid="uid://bm6tue5db307k" path="res://audio/SFX/Bell7.wav" id="8_2e4h6"]
[ext_resource type="AudioStream" uid="uid://blmskn7grjwy7" path="res://audio/SFX/Bell8.wav" id="9_52xcd"]
[ext_resource type="AudioStream" uid="uid://cqn2i13rraumd" path="res://audio/SFX/Bell10.wav" id="10_ho6lg"]
[ext_resource type="AudioStream" uid="uid://bk63hiddgbyfa" path="res://audio/SFX/Bell11.wav" id="11_mr4m0"]
[ext_resource type="AudioStream" uid="uid://c5qqgaf3nmaia" path="res://audio/SFX/Bell12.wav" id="12_5xbij"]
[ext_resource type="AudioStream" uid="uid://47gacqywmka7" path="res://audio/SFX/Bell13.wav" id="13_ula4t"]
[ext_resource type="AudioStream" uid="uid://c0tarmw7oiff" path="res://audio/SFX/Bell14.wav" id="14_4810w"]
[ext_resource type="AudioStream" uid="uid://bc0rpdo36l6yl" path="res://audio/SFX/Bell15.wav" id="15_cl0ra"]
[ext_resource type="AudioStream" uid="uid://yhwnugn5pnxg" path="res://audio/SFX/Bell16.wav" id="16_m2q0t"]
[ext_resource type="Texture2D" uid="uid://oa6wa2qppnvo" path="res://Sprites/b.png" id="17_ar5ln"]
[ext_resource type="Script" path="res://sCRIPTS/RecordPlay.gd" id="18_10bq5"]
[ext_resource type="PackedScene" uid="uid://c4mmqfjtrev34" path="res://MainMenu/MIDI_Controller.tscn" id="19_3syp6"]

[sub_resource type="AudioStream" id="AudioStream_kmyeg"]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 98.0
offset_top = 30.0
offset_right = 247.0
offset_bottom = 182.0
text = "Play 1"
script = ExtResource("1_8jkes")
stream = ExtResource("2_7rsjc")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Button"]
position = Vector2(71, 70)
texture = ExtResource("17_ar5ln")

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 268.0
offset_top = 32.0
offset_right = 427.0
offset_bottom = 182.0
text = "Play 2"
script = ExtResource("1_8jkes")
stream = ExtResource("3_mcski")

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 473.0
offset_top = 38.0
offset_right = 632.0
offset_bottom = 188.0
text = "Play 3"
script = ExtResource("1_8jkes")
stream = ExtResource("4_58ign")

[node name="Button4" type="Button" parent="CanvasLayer"]
offset_left = 665.0
offset_top = 40.0
offset_right = 824.0
offset_bottom = 190.0
text = "Play 4"
script = ExtResource("1_8jkes")
stream = ExtResource("5_r32l7")

[node name="Button5" type="Button" parent="CanvasLayer"]
offset_left = 867.0
offset_top = 39.0
offset_right = 1026.0
offset_bottom = 189.0
text = "Play 5"
script = ExtResource("1_8jkes")
stream = ExtResource("6_tatxd")

[node name="Button6" type="Button" parent="CanvasLayer"]
offset_left = 88.0
offset_top = 219.0
offset_right = 247.0
offset_bottom = 369.0
text = "Play 6"
script = ExtResource("1_8jkes")
stream = ExtResource("7_gb072")

[node name="Button7" type="Button" parent="CanvasLayer"]
offset_left = 276.0
offset_top = 217.0
offset_right = 435.0
offset_bottom = 367.0
text = "Play 7"
script = ExtResource("1_8jkes")
stream = ExtResource("8_2e4h6")

[node name="Button8" type="Button" parent="CanvasLayer"]
offset_left = 475.0
offset_top = 213.0
offset_right = 634.0
offset_bottom = 363.0
text = "Play 8"
script = ExtResource("1_8jkes")
stream = ExtResource("9_52xcd")

[node name="Button9" type="Button" parent="CanvasLayer"]
offset_left = 672.0
offset_top = 213.0
offset_right = 831.0
offset_bottom = 363.0
text = "Play 9"
script = ExtResource("1_8jkes")
stream = ExtResource("10_ho6lg")

[node name="Button10" type="Button" parent="CanvasLayer"]
offset_left = 872.0
offset_top = 216.0
offset_right = 1031.0
offset_bottom = 366.0
text = "Play 10"
script = ExtResource("1_8jkes")
stream = ExtResource("11_mr4m0")

[node name="Button11" type="Button" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 410.0
offset_right = 255.0
offset_bottom = 560.0
text = "Play 11"
script = ExtResource("1_8jkes")
stream = ExtResource("12_5xbij")

[node name="Button12" type="Button" parent="CanvasLayer"]
offset_left = 282.0
offset_top = 411.0
offset_right = 441.0
offset_bottom = 561.0
text = "Play 12"
script = ExtResource("1_8jkes")
stream = ExtResource("13_ula4t")

[node name="Button13" type="Button" parent="CanvasLayer"]
offset_left = 476.0
offset_top = 407.0
offset_right = 635.0
offset_bottom = 557.0
text = "Play 13"
script = ExtResource("1_8jkes")
stream = ExtResource("14_4810w")

[node name="Button14" type="Button" parent="CanvasLayer"]
offset_left = 679.0
offset_top = 406.0
offset_right = 838.0
offset_bottom = 556.0
text = "Play 14"
script = ExtResource("1_8jkes")
stream = ExtResource("15_cl0ra")

[node name="Button15" type="Button" parent="CanvasLayer"]
offset_left = 873.0
offset_top = 399.0
offset_right = 1032.0
offset_bottom = 549.0
text = "Play 15"
script = ExtResource("1_8jkes")
stream = ExtResource("16_m2q0t")

[node name="RecordButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.007
offset_left = 781.0
offset_top = 569.0
offset_right = 852.936
offset_bottom = 635.0
text = "Record
"
script = ExtResource("18_10bq5")

[node name="PlayButton" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.007
offset_left = 896.0
offset_top = 567.0
offset_right = 967.936
offset_bottom = 633.0
text = "Play"
script = ExtResource("18_10bq5")

[node name="ChimePlayer" type="AudioStreamPlayer" parent="."]

[node name="RecordedAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStream_kmyeg")
volume_db = 0.803

[node name="RecordingPlayer" type="AudioStreamPlayer" parent="."]

[node name="MIDI_Controller" parent="." instance=ExtResource("19_3syp6")]

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer/Button" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="CanvasLayer/Button2" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="CanvasLayer/Button3" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button4" to="CanvasLayer/Button4" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button5" to="CanvasLayer/Button5" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button6" to="CanvasLayer/Button6" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button7" to="CanvasLayer/Button7" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button8" to="CanvasLayer/Button8" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button9" to="CanvasLayer/Button9" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button10" to="CanvasLayer/Button10" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button11" to="CanvasLayer/Button11" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button12" to="CanvasLayer/Button12" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button13" to="CanvasLayer/Button13" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button14" to="CanvasLayer/Button14" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Button15" to="CanvasLayer/Button15" method="_on_pressed"]
[connection signal="button_down" from="CanvasLayer/RecordButton" to="CanvasLayer/RecordButton" method="_on_button_down"]
[connection signal="button_down" from="CanvasLayer/PlayButton" to="CanvasLayer/PlayButton" method="_on_button_down"]
[connection signal="finished" from="ChimePlayer" to="CanvasLayer/RecordButton" method="_on_chime_player_finished"]
[connection signal="finished" from="ChimePlayer" to="CanvasLayer/PlayButton" method="_on_chime_player_finished"]
[connection signal="finished" from="RecordedAudioPlayer" to="CanvasLayer/RecordButton" method="_on_recorded_audio_player_finished"]
[connection signal="finished" from="RecordedAudioPlayer" to="CanvasLayer/PlayButton" method="_on_recorded_audio_player_finished"]
[connection signal="finished" from="RecordingPlayer" to="CanvasLayer/RecordButton" method="_on_recording_player_finished"]
[connection signal="finished" from="RecordingPlayer" to="CanvasLayer/PlayButton" method="_on_recording_player_finished"]
